--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/Oda2/hapi-boilerplate/issues"
   },
   "scripts": {
+    "start": "index.js",
     "dev": "./node_modules/.bin/nodemon index.js",
     "lint": "./node_modules/.bin/eslint . --ext .js"
   },
@@ -33,10 +34,12 @@
     "@types/bluebird": "^3.5.20",
     "@types/boom": "^7.2.0",
     "@types/hapi": "^17.0.12",
+    "@types/inert": "^5.1.1",
     "@types/joi": "^13.3.0",
     "@types/lodash": "^4.14.109",
     "@types/mongoose": "^5.0.17",
     "@types/node": "^10.3.3",
+    "@types/vision": "^5.3.4",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
