--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "bluebird": "^3.5.1",
     "boom": "^7.2.0",
     "dotenv": "^6.0.0",
+    "good": "^8.1.1",
+    "good-console": "^7.1.0",
+    "good-squeeze": "^5.1.0",
     "hapi": "^17.5.1",
     "hapi-auth-jwt2": "^8.1.0",
     "hapi-boom-decorators": "^4.1.0",
