Inicio do template de teste

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "index.js",
     "dev": "./node_modules/.bin/nodemon index.js",
+    "test": "./node_modules/.bin/lab -l -v -m 60000 -r console -o stdout -r html -o coverage/coverage.html -r lcov -o coverage/lcov.info --pattern 'spec' src/test/index.spec.js src/modules/$1",
     "lint": "./node_modules/.bin/eslint . --ext .js"
   },
   "dependencies": {
@@ -39,13 +40,16 @@
     "@types/bcryptjs": "^2.4.1",
     "@types/bluebird": "^3.5.20",
     "@types/boom": "^7.2.0",
+    "@types/code": "^4.0.4",
     "@types/hapi": "^17.0.12",
     "@types/inert": "^5.1.1",
     "@types/joi": "^13.3.0",
+    "@types/lab": "^11.1.0",
     "@types/lodash": "^4.14.109",
     "@types/mongoose": "^5.0.17",
     "@types/node": "^10.3.3",
     "@types/vision": "^5.3.4",
+    "code": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -54,6 +58,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "lab": "^15.5.0",
     "nodemon": "^1.17.5"
   }
 }
