--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   node10:
     docker:
       - image: circleci/node:latest
+      - image: mongo:3.4.4-jessie
     working_directory: ~/repo
 
     steps:
@@ -24,10 +25,13 @@ jobs:
         
       # run tests!
       - run: yarn run lint
+      - run: yarn run test
+      - run: yarn run coverage
 
   node8:
     docker:
       - image: circleci/node:carbon
+      - image: mongo:3.4.4-jessie
     working_directory: ~/repo
 
     steps:
@@ -49,6 +53,8 @@ jobs:
         
       # run tests!
       - run: yarn run lint
+      - run: yarn run test
+      - run: yarn run coverage
 
 workflows:
   version: 2
