--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   node10:
     docker:
       - image: circleci/node:latest
-      - image: mongo:3.4.4-jessie
+      - image: mongo
     working_directory: ~/repo
 
     steps:
