--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
   node8:
     docker:
       - image: circleci/node:carbon
-      - image: mongo:3.4.4-jessie
+      - image: mongo
     working_directory: ~/repo
 
     steps:
