--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       # run tests!
       - run: yarn run lint
       - run: yarn run test
-      - run: yarn run coverage
+      - run: yarn run coveralls
 
   node8:
     docker:
@@ -54,7 +54,7 @@ jobs:
       # run tests!
       - run: yarn run lint
       - run: yarn run test
-      - run: yarn run coverage
+      - run: yarn run coveralls
 
 workflows:
   version: 2
