--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "eslint-plugin-standard": "^3.1.0",
     "lab": "^15.5.0",
     "nodemon": "^1.17.5"
+  },
+  "engines": {
+    "node": ">=8"
   }
 }
