--- a/wercker.yml
+++ b/wercker.yml
@@ -4,13 +4,25 @@ box: node:8
 # Definição do primeiro step
 build:
   steps:
-    - yarn-install
     - script:
-      name: gerar tag de imagem
+      name: install yarn
       code: |
-        export PACKAGE_VERSION=$(node -p "require('./package.json').version")
-        export IMAGE_TAG=$PACKAGE_VERSION
-        echo "$IMAGE_TAG" >> $WERCKER_SOURCE_DIR/.image_tag
+        npm install -g yarn
+    
+    - script:
+      name: set yarn cache
+      code: |
+        export YARN_CACHE=$WERCKER_CACHE_DIR/yarn
+    
+    - script:
+      name: install dependencies
+      code: |
+        HOME=$YARN_CACHE yarn
+    
+    - script:
+      name: build
+      code: |
+        npm run build
 
 # Definição do step de testes
 test:
