--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "index.js",
     "dev": "./node_modules/.bin/nodemon index.js",
     "test": "./node_modules/.bin/lab -l -v -m 60000 -r console --coverage -o stdout -r html -o coverage/coverage.html -r lcov -o coverage/lcov.info --pattern 'spec' src/test/index.spec.js src/modules/$1",
-    "lint": "./node_modules/.bin/eslint . --ext .js",
+    "eslint": "./node_modules/.bin/eslint . --ext .js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "dependencies": {
