--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "good": "^8.1.1",
     "good-console": "^7.1.0",
     "good-squeeze": "^5.1.0",
-    "hapi": "^17.5.2",
+    "hapi": "^17.5.3",
     "hapi-auth-jwt2": "^8.1.0",
-    "hapi-boom-decorators": "^4.1.0",
+    "hapi-boom-decorators": "^4.1.1",
     "hapi-swagger": "^9.1.1",
     "inert": "^5.1.0",
-    "joi": "^13.4.0",
+    "joi": "^13.5.2",
     "lodash": "^4.17.10",
-    "mongoose": "^5.2.2",
+    "mongoose": "^5.2.6",
     "vision": "^5.3.3"
   },
   "devDependencies": {
@@ -42,26 +42,26 @@
     "@types/bluebird": "^3.5.21",
     "@types/boom": "^7.2.0",
     "@types/code": "^4.0.4",
-    "@types/hapi": "^17.0.15",
+    "@types/hapi": "^17.0.17",
     "@types/inert": "^5.1.1",
-    "@types/joi": "^13.3.0",
+    "@types/joi": "^13.4.0",
     "@types/lab": "^11.1.0",
-    "@types/lodash": "^4.14.111",
-    "@types/mongoose": "^5.2.0",
-    "@types/node": "^10.5.2",
+    "@types/lodash": "^4.14.116",
+    "@types/mongoose": "^5.2.3",
+    "@types/node": "^10.5.6",
     "@types/vision": "^5.3.4",
     "code": "^5.2.0",
     "coveralls": "^3.0.2",
-    "eslint": "^4.19.1",
+    "eslint": "^5.3.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-config-standard": "^12.0.0-alpha.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "lab": "^15.5.0",
-    "nodemon": "^1.18.1"
+    "nodemon": "^1.18.3"
   },
   "engines": {
     "node": ">=8"
